# WITCH

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  bubble_ms0735.py  bubbles.py  eliptical_ms0735.py  eliptical_test.py  elliptical_ms0735_sims.py  fitter.py  gpu_minkasi_jax.ipynb  isobeta_funcs.py  isobeta_ms0735.py  luca_gnfw.py  minkasi_jax.py  mkdocs.yml  ms0735.py  ms0735.yaml  ms0735_2.py  presets_by_source.py  pyproject.toml  setup.py  sim_map_maker.py  speed_test.py  sup-factor.ipynb  versions.json
10.0.0/: 404.html  index.html  objects.inv  sitemap.xml
10.1.0/: 404.html  index.html  objects.inv  sitemap.xml
10.10.0/: 404.html  index.html  sitemap.xml
10.10.1/: 404.html  index.html  sitemap.xml
10.10.2/: 404.html  index.html  objects.inv  sitemap.xml
10.11.0/: 404.html  index.html  sitemap.xml
10.11.1/: 404.html  index.html  sitemap.xml
10.11.2/: 404.html  index.html  sitemap.xml
10.12.0/: 404.html  index.html  sitemap.xml
10.2.0/: 404.html  index.html  sitemap.xml
10.3.0/: 404.html  index.html  sitemap.xml
10.3.1/: 404.html  index.html  objects.inv  sitemap.xml
10.3.2/: 404.html  index.html  sitemap.xml
10.3.3/: 404.html  index.html  sitemap.xml
10.3.4/: 404.html  index.html  sitemap.xml
10.4.0/: 404.html  index.html  objects.inv  sitemap.xml
10.5.0/: 404.html  index.html  sitemap.xml
10.6.0/: 404.html  index.html  sitemap.xml
10.7.0/: 404.html  index.html  sitemap.xml
10.8.0/: 404.html  index.html  sitemap.xml
10.9.0/: 404.html  index.html  sitemap.xml
3.2.0/: 404.html  index.html  sitemap.xml
3.2.1/: 404.html  index.html  objects.inv  sitemap.xml
3.3.0/: 404.html  index.html  sitemap.xml
4.0.0/: 404.html  index.html  objects.inv  sitemap.xml
4.1.0/: 404.html  index.html  sitemap.xml
4.1.1/: 404.html  index.html  objects.inv  sitemap.xml
4.1.2/: 404.html  index.html  sitemap.xml
4.2.0/: 404.html  index.html  sitemap.xml
4.3.0/: 404.html  index.html  objects.inv  sitemap.xml
5.0.0/: 404.html  index.html  objects.inv  sitemap.xml
5.1.0/: 404.html  index.html  objects.inv  sitemap.xml
5.2.0/: 404.html  index.html  objects.inv  sitemap.xml
5.3.0/: 404.html  index.html  objects.inv  sitemap.xml
5.4.0/: 404.html  index.html  objects.inv  sitemap.xml
5.5.0/: 404.html  index.html  sitemap.xml
5.6.0/: 404.html  index.html  sitemap.xml
5.6.1/: 404.html  index.html  objects.inv  sitemap.xml
5.6.2/: 404.html  index.html  sitemap.xml
5.7.0/: 404.html  index.html  sitemap.xml
5.8.0/: 404.html  index.html  sitemap.xml
5.8.1/: 404.html  index.html  sitemap.xml
6.0.0/: 404.html  index.html  objects.inv  sitemap.xml
6.0.1/: 404.html  gen_ref_pages.py  index.html  sitemap.xml
6.0.2/: 404.html  index.html  sitemap.xml
6.0.3/: 404.html  index.html  sitemap.xml
6.0.4/: 404.html  index.html  sitemap.xml
6.1.0/: 404.html  index.html  sitemap.xml
6.1.1/: 404.html  index.html  sitemap.xml
6.2.0/: 404.html  index.html  sitemap.xml
6.2.1/: 404.html  index.html  sitemap.xml
6.3.0/: 404.html  index.html  sitemap.xml
6.3.1/: 404.html  index.html  sitemap.xml
6.3.2/: 404.html  index.html  sitemap.xml
6.3.3/: 404.html  index.html  sitemap.xml
6.4.0/: 404.html  index.html  objects.inv  sitemap.xml
6.5.0/: 404.html  index.html  sitemap.xml
7.0.0/: 404.html  index.html  sitemap.xml
8.0.0/: 404.html  index.html  objects.inv  sitemap.xml
8.1.0/: 404.html  index.html  sitemap.xml
8.1.1/: 404.html  index.html  sitemap.xml
witch/: core.py  (+17 more)
(+1583 files in other folders)
